[tool.poetry]
name = "py-crypto-exchange"
version = "0.1.0"
description = "A Python wrapper for crypto.com/exchange"
authors = ["Metarsit Leenayongwut <metarsit@outlook.com>", "Chay Choong <chaychoong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
